2015-02-01  Mikey Austin  <mikey@greyd.org>

	* Added new SPF validation functionality.
	* Fixed some minor bugs.

2015-01-28  Mikey Austin  <mikey@greyd.org>

	* Added greyd_pidfile & greylogd_pidfile functionality
	* Added support for DragonFly BSD.

2015-01-24  Mikey Austin  <mikey@greyd.org>

	* Fixed issues with sending sync messages.
	* Fixed issue with firewall process not terminating at shutdown.
	* Added support for NetBSD.
	* Added support for FreeBSD.

2015-01-19  Mikey Austin  <mikey@greyd.org>

	* Refactored internal firewall access between greyd processes.

2015-01-10  Mikey Austin  <mikey@greyd.org>

	* Bug fixes in sync engine
	* Consistent default config path handling

2015-01-08  Mikey Austin  <mikey@greyd.org>

	* Minor bug fix in netfilter driver preventing greylogd from operating.

2015-01-07  Mikey Austin  <mikey@greyd.org>

	* New PF firewall driver and OpenBSD portability changes.
	* Small bug fixes in error reporting for useability.

2015-01-01  Mikey Austin  <mikey@greyd.org>

	* Initial development release of greyd.